Assignment3/SemanticAnalyser.java
/* Generated By:JavaCC: Do not edit this line. SemanticAnalyser.java */
import java.util.*;
import java.io.*;
import java.lang.*;

class SemanticAnalyser implements SemanticAnalyserConstants {
  public static void main(String[] arg)
  throws ParseException, IOException {
    if (arg.length != 1) {
        System.out.println("Usage: SemanticAnalyser <input file name>");
        System.exit(0);
    }
    InputStream is = new FileInputStream(arg[0]);


    SemanticAnalyser parser = new SemanticAnalyser(is);
    // check Semantic 
    Node programNode = parser.Start();
    //programNode.print("");    
    //System.out.println("-------------------");

    boolean flag = false;
    flag = Semantic.checkProgram(programNode);

    if (flag) System.out.println("Check succeeded");
    if (!flag) System.out.println("Check failed");

  }

  static final public Node Start() throws ParseException {
    Node td;
    td = TopDec_List();
    jj_consume_token(0);
     {if (true) return td;}
    throw new Error("Missing return statement in function");
  }

  static final public Node TopDec_List() throws ParseException {
        Node tdec;
        Node tdec_list;
        Node n;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CHAR:
    case INT:
    case VOID:
      tdec = TopDec();
      tdec_list = TopDec_List();
                n = new Node(Id.TOPDEC);
                n.add(tdec);
                n.addTree(tdec_list);
                {if (true) return n;}
      break;
    default:
      jj_la1[0] = jj_gen;

                n = new Node(Id.EMPTY_STMNT);
                {if (true) return n;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Node TopDec() throws ParseException {
        Node n, ftype, id, fb;
        Node formals;
        Token t;
    if (jj_2_2(2147483647)) {
      n = VarDec();
      jj_consume_token(SEMI);
                {if (true) return n;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CHAR:
      case INT:
      case VOID:
        ftype = Funtype();
        id = Identifier();
        jj_consume_token(LPAREN);
        formals = Formals();
        jj_consume_token(RPAREN);
        if (jj_2_1(2)) {
          jj_consume_token(SEMI);
                n = new Node(Id.EXTERN);
                n.add(ftype);
                n.add(id);
                n.add(formals);
                {if (true) return n;}
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SEMI:
          case LBRACE:
            fb = Funbody();
                n = new Node(Id.FUNC);
                n.add(ftype);
                n.add(id);
                n.add(formals);
                n.add(fb);
                {if (true) return n;}
            break;
          default:
            jj_la1[1] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

// I combined ScalarDec and ArrayDec to avoid making conflict and using LOOKAHEAD.
  static final public Node VarDec() throws ParseException {
        Node typename, id, intCont;
        Node n;
    typename = TypeName();
    id = Identifier();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACK:
      jj_consume_token(LBRACK);
      intCont = IntegerLiteral();
      jj_consume_token(RBRACK);
                        n = new Node(Id.ARR_TYPE);
                        n.add(typename);
                        n.add(id);
                        n.add(intCont);
                        {if (true) return n;}
      break;
    default:
      jj_la1[3] = jj_gen;

                        n = new Node(Id.SCALAR_TYPE);
                        n.add (typename);
                        n.add (id);
                        {if (true) return n;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Node TypeName() throws ParseException {
        Node n;
        Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      t = jj_consume_token(INT);
                n = new Node(Id.INT);
                n.setPosition(Position.fromToken(t));
                {if (true) return n;}
      break;
    case CHAR:
      t = jj_consume_token(CHAR);
                n = new Node(Id.CHAR);
                n.setPosition(Position.fromToken(t));
                {if (true) return n;}
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Node Funtype() throws ParseException {
        Node n;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CHAR:
    case INT:
      n = TypeName();
                {if (true) return n;}
      break;
    case VOID:
      jj_consume_token(VOID);
                n = new Node(Id.VOID);
                {if (true) return n;}
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Node Funbody() throws ParseException {
        Node l, stmts;
        Node n;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      jj_consume_token(LBRACE);
      l = Locals();
      stmts = Stmts();
      jj_consume_token(RBRACE);
                n = new Node(Id.FUNCBODY);
                n.add (l);
                n.add(stmts);
                {if (true) return n;}
      break;
    case SEMI:
      jj_consume_token(SEMI);
                {if (true) return new Node(Id.EMPTY_STMNT);}
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Node Formals() throws ParseException {
        Node n;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VOID:
      jj_consume_token(VOID);
                 n = new Node(Id.VOID);
      break;
    case CHAR:
    case INT:
      n = Formal_List();
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return n;}
    throw new Error("Missing return statement in function");
  }

  static final public Node Formal_List() throws ParseException {
        Node formaldec, formal_list;
        Node n;
    formaldec = FormalDec();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      formal_list = Formal_List();
                n = new Node(Id.FORMAL);
                n.add(formaldec);
                n.addTree(formal_list);
                {if (true) return n;}
      break;
    default:
      jj_la1[8] = jj_gen;

                n = new Node(Id.FORMAL);
                n.add(formaldec);
                {if (true) return n;}
    }
    throw new Error("Missing return statement in function");
  }

// Cause I deleted scalardec, I modified this one, too.
  static final public Node FormalDec() throws ParseException {
        Node typename, id;
        Node n;
    typename = TypeName();
    id = Identifier();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACK:
      jj_consume_token(LBRACK);
      jj_consume_token(RBRACK);
                        n = new Node(Id.ARR_TYPE);
                        n.add(typename);
                        n.add(id);
                        {if (true) return n;}
      break;
    default:
      jj_la1[9] = jj_gen;

                        n = new Node(Id.SCALAR_TYPE);
                        n.add(typename);
                        n.add(id);
                        {if (true) return n;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Node Locals() throws ParseException {
        Node vardec, locals;
        Node n;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CHAR:
    case INT:
      vardec = VarDec();
      jj_consume_token(SEMI);
      locals = Locals();
                n = new Node(Id.VARDEC);
                n.add(vardec);
                n.addTree(locals);
                {if (true) return n;}
      break;
    default:
      jj_la1[10] = jj_gen;

         n = new Node (Id.EMPTY_STMNT); {if (true) return n;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Node Stmt() throws ParseException {
        Node expr, cond, stmt, else_part;
        Node n;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_CONSTANT:
    case IDENT:
    case NOT:
    case LPAREN:
    case MINUS:
    case CHARACTER:
      expr = Expr();
      jj_consume_token(SEMI);
                              {if (true) return expr;}
      break;
    case RETURN:
      jj_consume_token(RETURN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_CONSTANT:
      case IDENT:
      case NOT:
      case LPAREN:
      case MINUS:
      case CHARACTER:
        expr = Expr();
        jj_consume_token(SEMI);
                n = new Node (Id.RETURN);
                n.add (expr);
                {if (true) return n;}
        break;
      case SEMI:
        jj_consume_token(SEMI);
                n = new Node (Id.RETURN);
                {if (true) return n;}
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case WHILE:
      jj_consume_token(WHILE);
      cond = Exp_In_Paren();
      stmt = Stmt();
                        n = new Node (Id.WHILE);
                        n.add (cond);
                        n.add (stmt);
                        {if (true) return n;}
      break;
    case IF:
      jj_consume_token(IF);
      cond = Exp_In_Paren();
      stmt = Stmt();
      else_part = Else_part();
                        n = new Node (Id.IF);
                        n.add (cond);
                        n.add (stmt);
                        n.add (else_part);
                        {if (true) return n;}
      break;
    case LBRACE:
      jj_consume_token(LBRACE);
      stmt = Stmts();
      jj_consume_token(RBRACE);
                                            {if (true) return stmt;}
      break;
    case SEMI:
      jj_consume_token(SEMI);
                  n = new Node (Id.EMPTY_STMNT); {if (true) return n;}
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Node Stmts() throws ParseException {
        Node stmt;
        Node stmts;
        Node n;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
    case RETURN:
    case WHILE:
    case INTEGER_CONSTANT:
    case IDENT:
    case NOT:
    case LPAREN:
    case MINUS:
    case SEMI:
    case LBRACE:
    case CHARACTER:
      stmt = Stmt();
      stmts = Stmts();
                n = new Node(Id.STMNT);
                n.add(stmt);
                n.addTree(stmts);
                {if (true) return n;}
      break;
    default:
      jj_la1[13] = jj_gen;

                n = new Node(Id.EMPTY_STMNT);
                {if (true) return n;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Node Else_part() throws ParseException {
        Node stmt, n;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      stmt = Stmt();
                              {if (true) return stmt;}
      break;
    default:
      jj_la1[14] = jj_gen;

               n = new Node (Id.EMPTY_STMNT); {if (true) return n;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Node Expr_list() throws ParseException {
        Node e1, e2;
        Node expr_list;
    e1 = Expr();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      e2 = Expr_list();
                expr_list = new Node(Id.EXPR);
                expr_list.add(e1);
                expr_list.addTree(e2);

                {if (true) return expr_list;}
      break;
    default:
      jj_la1[15] = jj_gen;

                expr_list = new Node(Id.EXPR);
                expr_list.add(e1);
                {if (true) return expr_list;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Node Actuals() throws ParseException {
        Node expr_list;
        Node n;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_CONSTANT:
    case IDENT:
    case NOT:
    case LPAREN:
    case MINUS:
    case CHARACTER:
      expr_list = Expr_list();
                                 {if (true) return expr_list;}
      break;
    default:
      jj_la1[16] = jj_gen;

              {if (true) return new Node(Id.EMPTY_STMNT);}
    }
    throw new Error("Missing return statement in function");
  }

// Indentifier and Integer Constant has the highest priority.
//So we don't need to touch this.
  static final public Node Identifier() throws ParseException {
        Token t;
        Node n;
    t = jj_consume_token(IDENT);
                n = new IdentifierNode(t.image, Position.fromToken(t));
                {if (true) return n;}
    throw new Error("Missing return statement in function");
  }

  static final public Node IntegerLiteral() throws ParseException {
        Token t;
        Node n;
    t = jj_consume_token(INTEGER_CONSTANT);
                n = new IntegerLiteralNode(Integer.parseInt(t.image), Position.fromToken(t));
                {if (true) return n;}
    throw new Error("Missing return statement in function");
  }

//we can use this for both Condition and High precedence expression.
  static final public Node Exp_In_Paren() throws ParseException {
        Node t;
    jj_consume_token(LPAREN);
    t = Expr();
    jj_consume_token(RPAREN);
                                      {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public Node Character() throws ParseException {
        Token t;
        Node n;
    t = jj_consume_token(CHARACTER);
                n = new Node(Id.CHAR);
                {if (true) return n;}
    throw new Error("Missing return statement in function");
  }

//Priority 16
  static final public Node Term() throws ParseException {
        Node t1, t2, t3;
        Node id;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CHARACTER:
      t1 = Character();
                      {if (true) return t1;}
      break;
    case INTEGER_CONSTANT:
      t1 = IntegerLiteral();
                                  {if (true) return t1;}
      break;
    case LPAREN:
      t1 = Exp_In_Paren();
                                {if (true) return t1;}
      break;
    case IDENT:
      t1 = Identifier();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACK:
        jj_consume_token(LBRACK);
        t2 = Expr();
        jj_consume_token(RBRACK);
                                               t3 = new Node (Id.ARRAY); t3.add(t1); t3.add(t2); {if (true) return t3;}
        break;
      case LPAREN:
        jj_consume_token(LPAREN);
        t2 = Actuals();
        jj_consume_token(RPAREN);
                                                    t3 = new Node (Id.FCALL); t3.add(t1); t3.add(t2); {if (true) return t3;}
        break;
      default:
        jj_la1[17] = jj_gen;
                    {if (true) return t1;}
      }
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

//Priority 14
  static final public Node Unary() throws ParseException {
        Node inside, outside;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
      jj_consume_token(MINUS);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_CONSTANT:
      case IDENT:
      case LPAREN:
      case CHARACTER:
        inside = Term();
        break;
      case NOT:
      case MINUS:
        inside = Unary();
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                outside = new UnaryNode (Unop.NEG, inside);
                {if (true) return outside;}
      break;
    case NOT:
      jj_consume_token(NOT);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_CONSTANT:
      case IDENT:
      case LPAREN:
      case CHARACTER:
        inside = Term();
        break;
      case NOT:
      case MINUS:
        inside = Unary();
        break;
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                outside = new UnaryNode (Unop.NOT, inside);
                {if (true) return outside;}
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Node Priority14_Expr() throws ParseException {
        Node n;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_CONSTANT:
    case IDENT:
    case LPAREN:
    case CHARACTER:
      n = Term();
      break;
    case NOT:
    case MINUS:
      n = Unary();
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return n;}
    throw new Error("Missing return statement in function");
  }

// *, /
  static final public Node Priority13L_Expr() throws ParseException {
        Node t1, exp;
    t1 = Priority14_Expr();
    exp = Priority13L_Expr2(t1);
                                                            {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

  static final public Node Priority13L_Expr2(Node t1) throws ParseException {
        Node t2, t3, exp;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MUL:
      jj_consume_token(MUL);
      t2 = Priority14_Expr();
                                       t3 = new BinaryNode (Binop.MUL, t1, t2);
      exp = Priority13L_Expr2(t3);
                                                                                                                {if (true) return exp;}
      break;
    case DIV:
      jj_consume_token(DIV);
      t2 = Priority14_Expr();
                                         t3 = new BinaryNode (Binop.DIV, t1, t2);
      exp = Priority13L_Expr2(t3);
                                                                                                                  {if (true) return exp;}
      break;
    default:
      jj_la1[23] = jj_gen;
           {if (true) return t1;}
    }
    throw new Error("Missing return statement in function");
  }

// + , -
  static final public Node Priority12L_Expr() throws ParseException {
        Node t1, exp;
    t1 = Priority13L_Expr();
    exp = Priority12L_Expr2(t1);
                                                             {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

  static final public Node Priority12L_Expr2(Node t1) throws ParseException {
        Node t2, t3, exp;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
